app/javascript/packs/styles/overrides.scss
div.carousel:nth-child(0) { padding-top: 2em; }

*{
  min-width: 0;
  min-height: 0;
}

.carousel {

  &-headroom {
    padding-top: 3em;
  }

  &-item {
    text-align: center;
    margin: 1em;
    transition: all 0.3s;

    &:hover {
      transform: scale(1.1);
      cursor: pointer;
    }
  }

  &-title {
    padding-left: 1em;
  }
}

.slick-arrow:before, .slick-arrow:after {
  color: grey;
}

.slick-slide {
  outline: none;
}

.restrict-width {
  max-width: 400px;
}

.restrict-height {
  @media only screen and (min-width: 769px) {
    max-height: 600px;
  }
}

// 769 864

.grid {
  display: flex;
  flex-flow: row;
  flex-wrap: wrap;
  justify-content: flex-start;

  @media only screen and (min-width: 200px) and (max-width: 864px) {
    justify-content: center;
  }

  align-content: center;
}

.grid-cell {
  flex: 0;

  @media only screen and (min-width: 200px) and (max-width: 500px) {
    width: 24em;
  }

  @media only screen and (min-width: 501px) and (max-width: 768px) {
    width: 20em;
  }

  @media only screen and (min-width: 769px) and (max-width: 864px) {
    width: 14em;
  }

  @media only screen and (min-width: 865px) and (max-width: 1008px) {
    width: 16em;
  }

  @media only screen and (min-width: 1009px) and (max-width: 1200px) {
    width: 18em;
  }

  @media only screen and (min-width: 1201px) and (max-width: 1392px) {
    width: 16em;
  }

  @media only screen and (min-width: 1393px) and (max-width: 3000px) {
    //good
    width: 14.5em;
  }
}


.no-padding {
  padding-bottom: 0px;
}

// Album Page
.is-dark-gradient {
  background-image: linear-gradient(141deg, #1f191a 0%, #363636 71%, #46403f 100%);
}

.album .carousel {
  width: 400px;
}

